# trading-bot

./: .gitignore  README.md  bot.py  config.test.py  futures_bot.py  futures_test.py  models.py  parse_call.py  pyproject.toml  spot_bot.py  telegram_bot.py  trading_call.txt  trading_call_btc.txt  utils.py
